--- a/index.html
+++ b/index.html
@@ -76,14 +76,8 @@
   <script src="js/firebase-config.js"></script>
   <script src="js/performance.js"></script>
   
-  <!-- Register Service Worker for caching -->
+  <!-- Ensure complete logout when coming from logout -->
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('service-worker.js');
-      });
-    }
-    
     // Ensure complete logout when coming from logout
     document.addEventListener('DOMContentLoaded', function() {
       // Check if we're coming from logout (URL parameter)
